@@ -14,6 +14,11 @@ bzr 2.1.1
 Bug Fixes
 *********
 
+* Register SIGWINCH handler only when creating a ``TextUIFactory``; avoids
+  problems importing bzrlib from a non-main thread.
+  (Elliot Murphy, #521989)
+
+
 bzr 2.1.0
 #########
 
